--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="prefetch" href="/assets/main.mjs" />
     <link rel="stylesheet" href="/assets/main.css" />
     <link rel="manifest" href="/assets/manifest.json" />
-    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="https://img.hangdn.com/hexo/handan.ico" />
   </head>
   <body>
     <div id="app"></div>
